reclass container name to main; copy/ grammar edit

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             text-align: center;
 
         }
-        .wins {
+        .main {
             background-color:#636363;
             color: #f0f2f5;
             padding: 20px 0px 20px 50px;
@@ -41,7 +41,7 @@
             <div class="jumbotron jumbotron-fluid" style="background-color:#222222;">
                 <div class="container intro">
                     <h1 class="display-1" style="font-family:Montserrat, sans-serif; color:#ffb250">Who Am I?</h1>
-                    <h4 class="lead" style="font-family:Eczar, serif; color:#f0f2f5;">"Knowing yourself is the begining of all wisdom" ~ Aristotle</h4>
+                    <h4 class="lead" style="font-family:Eczar, serif; color:#f0f2f5;">"Knowing yourself is the begining of all wisdom"  ~Aristotle</h4>
         </div>
         <div class="container-fluid domain">
             <div class="row">
@@ -60,7 +60,7 @@
             </div>
         </div>
         <div class="navbar">Achievements</div>
-        <div class="container-fluid wins">
+        <div class="container-fluid main">
             <h6 style="font-weight:800;">Year 2020</h6>
                 <ul>MOE Edusave Certificate of Academic Achievements
                 <br>Primary 5
