changed jumbotron lead to blockquote

--- a/index.html
+++ b/index.html
@@ -18,30 +18,37 @@
         }
         .intro {
             text-align: center;
-            margin: 60px;
+            padding-bottom: 30px;
         }
         .domain {
             background-color: #00c2c7;
             padding: 20px;
             text-align: center;
-
         }
         .main {
             background-color:#636363;
             color: #f0f2f5;
-            padding: 20px 0px 20px 50px;
+            padding: 10px 0px 10px 15px;
             font-family: Montserrat, sans-serif;
-            font-size: 90%;
+            font-size: 80%;
+        }
+        .quotes {
+            font-family: Eczar, serif; 
+            color: #f0f2f5;
+            font-size: 95%;
         }
     </style>
     </head>
     <body>
         <nav class="nav justify-content-center navbar">JK logo</nav>
-        </div>
+        <div>
             <div class="jumbotron jumbotron-fluid" style="background-color:#222222;">
                 <div class="container intro">
-                    <h1 class="display-1" style="font-family:Montserrat, sans-serif; color:#ffb250">Who Am I?</h1>
-                    <h4 class="lead" style="font-family:Eczar, serif; color:#f0f2f5;">"Knowing yourself is the begining of all wisdom"  ~Aristotle</h4>
+                    <h1 class="display-3" style="font-family:Montserrat, sans-serif; color:#ffb250">Who Am I?</h1>
+                    <blockquote class="blockquote text-center quotes">
+                        <p class="mb-0">Knowing yourself is the begining of all wisdom"</p>
+                        <footer class="blockquote-footer"> Aristotle </footter>
+                    </blockquote>
         </div>
         <div class="container-fluid domain">
             <div class="row">
@@ -110,7 +117,7 @@
                 <br>Grade 02 Violin
                 </ul>
                 <ul>Certificate of Completion
-                <br>Backstroke Competency Programme
+                <br>TSR Backstroke Competency Programme
                 </ul>
                 <hr>
              <h6 style="font-weight:800;">Year 2018</h6>
@@ -128,6 +135,9 @@
                 </ul>
                 <ul>Model Pupil Award - Primary 3
                 <br>Singapore Primary School
+                </ul>
+                <ul>Certificate of Completion
+                <br>TSR Breaststroke Competency Programme
                 </ul>
                 <ul>Certificate of Paticipation
                 <br>Introduction to Basic Meditation
