added domain icons and logo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>WhoAmI?</title>
+        <title>Who Am I?</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css2?family=Eczar&family=Montserrat&display=swap" rel="stylesheet"> 
@@ -35,38 +35,52 @@
         .quotes {
             font-family: Eczar, serif; 
             color: #f0f2f5;
-            font-size: 95%;
+            font-size: 110%;
+        }
+         .footer {
+                color: #f0f2f5;
+                font-size: 90%;
         }
     </style>
     </head>
     <body>
-        <nav class="nav justify-content-center navbar">JK logo</nav>
+        <nav class="nav justify-content-center navbar">
+            <img src="images/jklogo.png" alt="JK logo" style="max-width: 120px;"></img>
+        </nav>
         <div>
             <div class="jumbotron jumbotron-fluid" style="background-color:#222222;">
                 <div class="container intro">
-                    <h1 class="display-3" style="font-family:Montserrat, sans-serif; color:#ffb250">Who Am I?</h1>
+                    <h1 class="display-1" style="font-family:Montserrat, sans-serif; color:#ffb250">Who Am I?</h1>
                     <blockquote class="blockquote text-center quotes">
-                        <p class="mb-0">Knowing yourself is the begining of all wisdom"</p>
-                        <footer class="blockquote-footer"> Aristotle </footter>
+                        <p class="mb-0">"Knowing yourself is the begining of all wisdom"</p>
+                        <footer class="blockquote-footer footer"><em> Aristotle</em></footter>
                     </blockquote>
         </div>
         <div class="container-fluid domain">
             <div class="row">
                 <div class="col-sm">
-                    <a href="cognitive.html">Math</a>
+                    <a href="cognitive.html">
+                        <img src="images/icons/math.png" alt="Mathematics" style="max-width: 80px; padding: 5px;"></img>
+                    </a>
                 </div>
                 <div class="col-sm">
-                    <a href="physical.html">Spartan</a>
+                    <a href="physical.html">
+                        <img src="images/icons/spartan.png" alt="Spartan" style="max-width: 80px; padding: 5px;"></img>
+                    </a>
                 </div>
                 <div class="col-sm">
-                    <a href="cognitive.html#coding">Coding</a>
+                    <a href="cognitive.html#coding">
+                        <img src="images/icons/code.png" alt="Coding" style="max-width: 80px; padding: 5px;"></img>
+                    </a>
                 </div>
                 <div class="col-sm">
-                    <a href="aesthetic.html">Violin</a>
+                    <a href="aesthetic.html">
+                        <img src="images/icons/violin.png" alt="Music" style="max-width: 80px; padding: 5px;"></img>
+                    </a>
                 </div>
             </div>
         </div>
-        <div class="navbar">Achievements</div>
+        <div class="navbar">Accomplishments & Achievements</div>
         <div class="container-fluid main">
             <h6 style="font-weight:800;">Year 2020</h6>
                 <ul>MOE Edusave Certificate of Academic Achievements
