--- a/physical.html
+++ b/physical.html
@@ -25,14 +25,23 @@
             .main {
                 background-color:#636363;
                 color: #f0f2f5;
-                padding: 20px 20px 20px 50px;
+                padding: 20px 20px 20px 20px;
                 font-family: Montserrat, sans-serif;
                 font-size: 90%;
         }
             .domain {
             background-color: #00c2c7;
-            padding: 20px;
+            padding: 10px 10px 0px 10px;
             text-align: center;
+        }
+            .quotes {
+            font-family: Eczar, serif; 
+            color: #f0f2f5;
+            font-size: 110%;
+        }
+            .footer {
+                color: #f0f2f5;
+                font-size: 90%;
         }
         </style>
     </head>
@@ -41,7 +50,9 @@
             <li class="nav-item">
                 <a class="nav-link active" href="index.html">Home</a>
             </li>
-            <li class="nav-item">jk logo</li>
+            <li class="nav-item">
+                <img src="images/jklogo.png" alt="JK logo" style="max-width: 120px;"></img>
+            </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Domains</a>
                 <div class="dropdown-menu">
@@ -54,7 +65,10 @@
         <div class="jumbotron jumbotron-fluid" style="background-color:#222222;">
             <div class="container" style="padding: 25px;">
                 <h1 class="display-4" style="font-family:Montserrat, sans-serif; color:#ffb250">I AM ... A SPARTAN KID</h1>
-                <h6 class="lead" style="font-family:Eczar, serif; color:#f0f2f5; font-size: 95%">"It is exercise alone that supports the spirit and keeps the mind in vigor"  ~Cicero</h6>
+                <blockquote class="blockquote quotes">
+                    <p class="mb-0">"It is exercise alone that supports the spirit and keeps the mind in vigor"</p>
+                        <footer class="blockquote-footer footer"><em>Cicero</em></footer>
+                </blockquote>
         </div>    
         <div class="container-fluid main">
             <div class="justify-content-center">
@@ -68,36 +82,44 @@
                 <ul>A Spartan understands their current abilities</ul>
                 <ul>A Spartan sets new goals to be the best that they can be</ul>
                 <hr>
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-sm">    
-                            <img src="images/physical/3spartan.jpg" alt="Spartan Kids" style="max-width:450px; padding: 10px;"></img>
-                        </div>
-                        <div class="col-sm">
-                            <img src="images/physical/sw5k.jpg" alt="Star Wars 5KM" style="max-width:308px; padding: 10px;"></img>
-                        </div>
-                        <div class="w-100"></div>
-                        <div class="col-sm">
-                            <video width="600" controls style="padding: 10px;">
-                                <source src="videos/spartan.mov" alt="Junior Spartan Race">
-                            </video>
-                        </div>
-                        <div class="w-100"></div>
-                        <div class="col-sm">
-                            <img src="images/physical/ican.jpg" alt="I Can" style="max-width:350px; padding: 10px;"></img>
-                        </div>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col">    
+                        <img src="images/physical/ican.jpg" alt="I'll show you that I Can" style="max-width:230px; padding: 2px;"></img>
+                    </div>
+                    <div class="col">
+                        <video width="350" controls style="padding: 5px;">
+                            <source src="videos/spartan.mov" alt="Junior Spartan Race">
+                        </video>
+                    </div>
+                    <div class="col">
+                        <img src="images/physical/excel.jpg" alt="Excellence is an Attitude" style="max-width:230px; padding: 2px;"></img>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <img src="images/physical/sw5k.jpg" alt="Star Wars 5KM" style="max-width:230px; padding: 5px;"></img>
+                    </div>
+                    <div class="col">
+                        <img src="images/physical/3spartan.jpg" alt="Spartan Kids" style="max-width:340px; padding: 5px;"></img>
+                    </div>
+                    <div class="col">
+                        <img src="images/physical/rc.jpg" alt="Spider Boy" style="max-width:230px; padding: 5px;"></img>
                     </div>
                 </div>
             </div>
         </div>
         <nav class="nav navbar container-fluid domain">
-            <h4>My Journey</h4>
+            <h5>My Journey</h5>
             <a href="https://www.strava.com/athletes/51155064">Follow me on Strava</a>
         </nav>
         <div class="container-fluid main justify-content-center">
             <h6 style="font-weight:800;">Year 2020</h6>
+                <p>The COVID19 pandemic has changed how I continue onwards with my journey in fitness and health. I mostly clock 10km of biking or 5km of running around my neighborhood.</p>
             <h6 style="font-weight:800;">Year 2019</h6>
+                <p>2019 was a year where I ventured into various other sporting activity aside from my training in BJJ and swimming! From team based football and badminton to individual focused such as figure skating and rock climbing. Rock climbing came so naturally to me that I was given the nickname spider-boy!   </p>
             <h6 style="font-weight:800;">Year 2018</h6>
+                <p>I started training in Brazilian Jiu Jitsu (BJJ) as a form of fitness and self defence on top of swimming. I've come to appreaciate that both of these are lifeskills for survival. My most crucial take away from martial arts is its moral and ethical codes of where teachings are based on compassion, bravery, honesty and humility. </p>
         </div>
     </body>
 </html>
