amended video source to mp4

--- a/physical.html
+++ b/physical.html
@@ -89,7 +89,7 @@
                     </div>
                     <div class="col">
                         <video width="350" controls style="padding: 5px;">
-                            <source src="videos/spartan.mov" alt="Junior Spartan Race">
+                            <source src="videos/spartan.mp4" alt="Junior Spartan Race">
                         </video>
                     </div>
                     <div class="col">
