--- a/physical.html
+++ b/physical.html
@@ -85,7 +85,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col">    
-                        <img src="images/physical/ican.jpg" alt="I'll show you that I Can" style="max-width:230px; padding: 2px;"></img>
+                        <img src="images/physical/ican.jpg" alt="I'll show you that I Can" style="max-width:230px; margin: 5px;" class="rounded mx-auto d-block img-thumbnail"></img>
                     </div>
                     <div class="col">
                         <video width="350" controls style="padding: 5px;">
@@ -93,18 +93,18 @@
                         </video>
                     </div>
                     <div class="col">
-                        <img src="images/physical/excel.jpg" alt="Excellence is an Attitude" style="max-width:230px; padding: 2px;"></img>
+                        <img src="images/physical/excel.jpg" alt="Excellence is an Attitude" style="max-width:230px; margin: 5px;" class="rounded mx-auto d-block img-thumbnail"></img>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        <img src="images/physical/sw5k.jpg" alt="Star Wars 5KM" style="max-width:230px; padding: 5px;"></img>
+                        <img src="images/physical/sw5k.jpg" alt="Star Wars 5KM" style="max-width:230px; margin: 5px;"class="rounded mx-auto d-block img-thumbnail"></img>
                     </div>
                     <div class="col">
-                        <img src="images/physical/3spartan.jpg" alt="Spartan Kids" style="max-width:340px; padding: 5px;"></img>
+                        <img src="images/physical/3spartan.jpg" alt="Spartan Kids" style="max-width:340px; margin: 5px;"class="rounded mx-auto d-block img-thumbnail"></img>
                     </div>
                     <div class="col">
-                        <img src="images/physical/rc.jpg" alt="Spider Boy" style="max-width:230px; padding: 5px;"></img>
+                        <img src="images/physical/rc.jpg" alt="Spider Boy" style="max-width:230px; margin: 5px 0px 10px 0px;" class="rounded mx-auto d-block img-thumbnail"></img>
                     </div>
                 </div>
             </div>
