fixed div closure; edit video alt and type

--- a/physical.html
+++ b/physical.html
@@ -31,7 +31,7 @@
         }
             .domain {
             background-color: #00c2c7;
-            padding: 10px 10px 0px 10px;
+            padding: 10px 20px 0px 20px;
             text-align: center;
         }
             .quotes {
@@ -82,14 +82,15 @@
                 <ul>A Spartan understands their current abilities</ul>
                 <ul>A Spartan sets new goals to be the best that they can be</ul>
                 <hr>
+            </div>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col">    
                         <img src="images/physical/ican.jpg" alt="I'll show you that I Can" style="max-width:230px; margin: 5px;" class="rounded mx-auto d-block img-thumbnail"></img>
                     </div>
                     <div class="col">
-                        <video width="350" controls style="padding: 5px;">
-                            <source src="videos/spartan.mp4" alt="Junior Spartan Race">
+                        <video width="350" controls style="padding: 5px;" alt="Junior Spartan Race">
+                            <source src="videos/spartan.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="col">
