edit: physical video frame & alignment

--- a/physical.html
+++ b/physical.html
@@ -89,7 +89,7 @@
                         <img src="images/physical/ican.jpg" alt="I'll show you that I Can" style="max-width:230px; margin: 5px;" class="rounded mx-auto d-block img-thumbnail"></img>
                     </div>
                     <div class="col">
-                        <video width="350" controls style="padding: 5px;" alt="Junior Spartan Race">
+                        <video width="350" controls style="padding: 5px; border: white solid 3px;" alt="Junior Spartan Race" class="mx-auto d-block">
                             <source src="videos/spartan.mp4" type="video/mp4">
                         </video>
                     </div>
