--- a/aesthetic.html
+++ b/aesthetic.html
@@ -22,7 +22,7 @@
             .main {
                 background-color:#636363;
                 color: #f0f2f5;
-                padding: 20px 0px 20px 50px;
+                padding: 20px 50px 20px 50px;
                 font-family: Montserrat, sans-serif;
                 font-size: 90%;
         }
@@ -75,7 +75,7 @@
                     <img src="images/aesthetic/m17.jpg" alt="Christmas Recital" style="max-width:230px; margin: 5px;" class="rounded mx-auto d-block img-thumbnail"></img>
                 </div>
                 <div class="col">
-                    <video width="220" controls style="margin: 5px;" alt="ABRSM Violin Grade01" class="mx-auto d-block img-thumbnail">
+                    <video width="250" controls style="margin: 5px; border: solid white 3px;" alt="ABRSM Violin Grade01" class="mx-auto d-block">
                         <source src="videos/g1.mp4" type="video/mp4">
                     </video>
                 </div>
