edited css into jkstyle.css

--- a/index.html
+++ b/index.html
@@ -9,73 +9,44 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css2?family=Eczar&family=Montserrat&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <style>
-        .navbar {
-            background-color: #ffb250;
-            font-family: Eczar, serif;
-            font-size: 130%;
-            padding: 15px;
-        }
-        .intro {
-            text-align: center;
-            padding-bottom: 30px;
-        }
-        .domain {
-            background-color: #00c2c7;
-            padding: 20px;
-            text-align: center;
-        }
-        .main {
-            background-color:#636363;
-            color: #f0f2f5;
-            padding: 10px 0px 10px 15px;
-            font-family: Montserrat, sans-serif;
-            font-size: 80%;
-        }
-        .quotes {
-            font-family: Eczar, serif; 
-            color: #f0f2f5;
-            font-size: 110%;
-        }
-         .footer {
-                color: #f0f2f5;
-                font-size: 90%;
-        }
-    </style>
+        <link href="css/jkstyle.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <nav class="nav justify-content-center navbar">
-            <img src="images/jklogo.png" alt="JK logo" style="max-width: 120px;"></img>
+            <img id="jklogo" src="images/jklogo.png" alt="JK logo"></img>
         </nav>
-        <div>
-            <div class="jumbotron jumbotron-fluid" style="background-color:#222222;">
+            <div class="jumbotron jumbotron-fluid intro">
                 <div class="container intro">
-                    <h1 class="display-1" style="font-family:Montserrat, sans-serif; color:#ffb250">Who Am I?</h1>
+                    <h1 class="topper display-1">Who Am I?</h1>
                     <blockquote class="blockquote text-center quotes">
                         <p class="mb-0">"Knowing yourself is the begining of all wisdom"</p>
                         <footer class="blockquote-footer footer"><em> Aristotle</em></footter>
                     </blockquote>
-        </div>
+            </div>
         <div class="container-fluid domain">
             <div class="row">
                 <div class="col-sm">
                     <a href="cognitive.html">
-                        <img src="images/icons/math.png" alt="Mathematics" style="max-width: 80px; padding: 5px;"></img>
+                        <img class="icon" src="images/icons/math.png" alt="Mathematics"></img>
+                        <br> Math Olympiad
                     </a>
                 </div>
                 <div class="col-sm">
                     <a href="physical.html">
-                        <img src="images/icons/spartan.png" alt="Spartan" style="max-width: 80px; padding: 5px;"></img>
+                        <img class="icon" src="images/icons/spartan.png" alt="Spartan"></img>
+                        <br> Spartan Kid
                     </a>
                 </div>
                 <div class="col-sm">
                     <a href="cognitive.html#coding">
-                        <img src="images/icons/code.png" alt="Coding" style="max-width: 80px; padding: 5px;"></img>
+                        <img class="icon" src="images/icons/code.png" alt="Coding"></img>
+                        <br> Robotics & Coding
                     </a>
                 </div>
                 <div class="col-sm">
                     <a href="aesthetic.html">
-                        <img src="images/icons/violin.png" alt="Music" style="max-width: 80px; padding: 5px;"></img>
+                        <img class="icon" src="images/icons/violin.png" alt="Music"></img>
+                        <br> Violin
                     </a>
                 </div>
             </div>
@@ -105,7 +76,7 @@
                 <br>Australian Mathematics Competition
                 </ul>
                 <hr>
-             <h6 style="font-weight:800;">Year 2019</h6>
+            <h6 style="font-weight:800;">Year 2019</h6>
                 <ul>MOE Edusave EAGLES Award
                 <br>Primary 4
                 </ul>
@@ -134,7 +105,7 @@
                 <br>TSR Backstroke Competency Programme
                 </ul>
                 <hr>
-             <h6 style="font-weight:800;">Year 2018</h6>
+            <h6 style="font-weight:800;">Year 2018</h6>
                 <ul>CDC-CCC Education Merit Award
                 <br>Primary 3
                 </ul>
@@ -156,7 +127,6 @@
                 <ul>Certificate of Paticipation
                 <br>Introduction to Basic Meditation
                 </ul>
-        </div>
-        
+        </div 
     </body>
 </html>
