moved domain section to underneath navbar

--- a/index.html
+++ b/index.html
@@ -15,41 +15,41 @@
         <nav class="nav justify-content-center navbar">
             <img id="jklogo" src="images/jklogo.png" alt="JK logo"></img>
         </nav>
-            <div class="jumbotron jumbotron-fluid intro">
-                <div class="container intro">
-                    <h1 class="topper display-1">Who Am I?</h1>
-                    <blockquote class="blockquote text-center quotes">
-                        <p class="mb-0">"Knowing yourself is the begining of all wisdom"</p>
-                        <footer class="blockquote-footer footer"><em> Aristotle</em></footter>
-                    </blockquote>
-            </div>
         <div class="container-fluid domain">
             <div class="row">
-                <div class="col-sm">
+                <div class="col">
                     <a href="cognitive.html">
                         <img class="icon" src="images/icons/math.png" alt="Mathematics"></img>
-                        <br> Math Olympiad
+                        <br>Olympian
                     </a>
                 </div>
-                <div class="col-sm">
+                <div class="col">
                     <a href="physical.html">
                         <img class="icon" src="images/icons/spartan.png" alt="Spartan"></img>
-                        <br> Spartan Kid
+                        <br>Spartan
                     </a>
                 </div>
-                <div class="col-sm">
+                <div class="col">
                     <a href="cognitive.html#coding">
                         <img class="icon" src="images/icons/code.png" alt="Coding"></img>
-                        <br> Robotics & Coding
+                        <br>Coder
                     </a>
                 </div>
-                <div class="col-sm">
+                <div class="col">
                     <a href="aesthetic.html">
                         <img class="icon" src="images/icons/violin.png" alt="Music"></img>
-                        <br> Violin
+                        <br>Violinist
                     </a>
                 </div>
             </div>
+        </div>
+        <div class="jumbotron jumbotron-fluid intro">
+            <div class="container intro">
+                <h1 class="topper display-1">Who Am I?</h1>
+                <blockquote class="blockquote text-center quotes">
+                    <p class="mb-0">"Knowing yourself is the begining of all wisdom"</p>
+                    <footer class="blockquote-footer footer"><em> Aristotle</em></footter>
+                </blockquote>
         </div>
         <div class="navbar">Accomplishments & Achievements</div>
         <div class="container-fluid main">
@@ -127,6 +127,6 @@
                 <ul>Certificate of Paticipation
                 <br>Introduction to Basic Meditation
                 </ul>
-        </div 
+        </div>
     </body>
 </html>
